QColor: unify behavior when passing invalid values to setFoo()

Calling QColor::setFoo() is currently inconsistent - some setter do
invalidate the colors, some don't. Unify it by calling invalidate in
every setter.

Task-number: QTBUG-62452
Change-Id: Ia4f0bd16ea30e9659bc989ffc2b319892438b84b
Reviewed-by: André Hartmann <aha_1980@gmx.de>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>